# onnc-tutorial

./: README.md
lab_1_Environment_Setup/: lab_1.md
lab_2_Digit_Recognition_with_ARM_CortexM/: lab_2.md
lab_2_Digit_Recognition_with_ARM_CortexM/mnist_demo_gui/: mnist_demo_gui.pde
lab_2_Digit_Recognition_with_ARM_CortexM/onnc-cmsis-example/: .gitignore  .mbed  .mbedignore  CMSIS_5.lib  README.md  add.cpp  add.h  cortexm_out.cpp  main.cpp  run.sh
lab_3_Starting_New_Backend/: lab_3.md
lab_4_Code_Emitting/: lab_4.md
lab_4_Code_Emitting/src/: visit_Add.cpp
lab_5_CPU_Fallback/: lab_5.md
lab_5_CPU_Fallback/src/: emu_interface.h  visit_Log.cpp  visit_Relu.cpp
lab_6_Manipulating_ONNC_IR/: lab_6.md
lab_6_Manipulating_ONNC_IR/src/: FooNvdlaBackend.cpp  GraphvizONNCIRPass.cpp  GraphvizONNCIRPass.h  test_Conv_Relu.dot
lab_7_ONNC_IR_Extension/: lab_7.md
lab_7_ONNC_IR_Extension/src/: CodeEmitVisitor.cpp  CodeEmitVisitor.h  FooNvdlaBackend.cpp  NvDlaIdentifyShufflePass.cpp  NvDlaIdentifyShufflePass.h  NvDlaShuffle.cpp  NvDlaShuffle.h
lab_8_Mul_Add_Reordering_and_Fusion/: lab_8.md
lab_8_Mul_Add_Reordering_and_Fusion/src/: CMakeLists.txt  CodeEmitVisitor.cpp  CodeEmitVisitor.h  FooNvdlaBackend.cpp  FooNvdlaBackend.h  Makefile.am  NvDlaAddMulRelu.cpp  NvDlaAddMulRelu.h  NvDlaFuseAddMulReluPass.cpp  NvDlaFuseAddMulReluPass.h  NvDlaReorderMulAddPass.cpp  NvDlaReorderMulAddPass.h  PrintONNCIRPass.cpp  PrintONNCIRPass.h
models/lenet/: input0.output.dimg  input7.output.dimg
models/test_Add/: out.nvdla  test_Add.nvdla  test_Add.onnx  test_Add.output.dimg
(+12 files in other folders)
