ONNC_TARGET_SOURCES += \
  Target/FooNvdla/CodeEmitVisitor.cpp \
  Target/FooNvdla/FooNvdlaBackend.cpp \
  Target/FooNvdla/Loadable.cpp \
  Target/FooNvdla/NvDlaDefine.cpp \
  Target/FooNvdla/NvDlaMeta.cpp \
  Target/FooNvdla/NvDlaUtil.cpp \
  Target/FooNvdla/NvDlaMemInfoPass.cpp \
  Target/FooNvdla/NvDlaTaskSubmitPass.cpp \
  Target/FooNvdla/NvDlaFileGenPass.cpp \
  Target/FooNvdla/NvDlaReorderMulAddPass.cpp \
  Target/FooNvdla/Compute/NvDlaAddMulRelu.cpp \
  Target/FooNvdla/NvDlaFuseAddMulReluPass.cpp \
  Target/FooNvdla/PrintONNCIRPass.cpp \
  Target/FooNvDla/Config/NvFull.cpp \
  Target/FooNvdla/TargetInfo/FooNvdlaTargetInfo.cpp \
  Target/FooNvdla/TargetInfo/FooNvdlaTargetMemInfo.cpp

ONNC_INCLUDES += \
  -I${srcdir}/Target/FooNvdla/include \
  -I${srcdir}/Target/FooNvdla/
